--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.44.0",
     "@tanstack/react-query": "^5.45.0",
     "autoprefixer": "^10.4.19",
-    "dotenv": "^16.5.0",
+    "date-fns": "^4.1.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
