--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.0.2",
     "@mui/material-nextjs": "^6.0.2",
     "@mui/system": "^6.0.2",
+    "@mui/x-date-pickers": "^8.5.1",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.0",
     "@tanstack/react-query": "^5.45.0",
